# eJson

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  README.rst  conanfile.py  pyproject.toml
data/conan/profiles/: armv7.conf
include/: eJson.hh
scripts/: build_linux.sh  unittests_linux.sh
src/: CMakeLists.txt  main.cpp  test.eJson
tests/unittests/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  main_test.cc
